@@ -1503,7 +1503,7 @@ pub  extern fn indy_prover_close_credentials_search(command_handle: CommandHandl
 ///     {
 ///         "name": string,
 ///         "version": string,
-///         "nonce": string, - a big number represented as a string (use `indy_generate_nonce` function to generate 80-bit number)
+///         "nonce": string, - a decimal number represented as a string (use `indy_generate_nonce` function to generate 80-bit number)
 ///         "requested_attributes": { // set of requested attributes
 ///              "<attr_referent>": <attr_info>, // see below
 ///              ...,
@@ -1630,7 +1630,7 @@ pub extern fn indy_prover_get_credentials_for_proof_req(command_handle: CommandH
 ///     {
 ///         "name": string,
 ///         "version": string,
-///         "nonce": string, - a big number represented as a string (use `indy_generate_nonce` function to generate 80-bit number)
+///         "nonce": string, - a decimal number represented as a string (use `indy_generate_nonce` function to generate 80-bit number)
 ///         "requested_attributes": { // set of requested attributes
 ///              "<attr_referent>": <attr_info>, // see below
 ///              ...,
@@ -1860,7 +1860,7 @@ pub  extern fn indy_prover_close_credentials_search_for_proof_req(command_handle
 ///     {
 ///         "name": string,
 ///         "version": string,
-///         "nonce": string, - a big number represented as a string (use `indy_generate_nonce` function to generate 80-bit number)
+///         "nonce": string, - a decimal number represented as a string (use `indy_generate_nonce` function to generate 80-bit number)
 ///         "requested_attributes": { // set of requested attributes
 ///              "<attr_referent>": <attr_info>, // see below
 ///              ...,
@@ -2062,7 +2062,7 @@ pub extern fn indy_prover_create_proof(command_handle: CommandHandle,
 ///     {
 ///         "name": string,
 ///         "version": string,
-///         "nonce": string, - a big number represented as a string (use `indy_generate_nonce` function to generate 80-bit number)
+///         "nonce": string, - a decimal number represented as a string (use `indy_generate_nonce` function to generate 80-bit number)
 ///         "requested_attributes": { // set of requested attributes
 ///              "<attr_referent>": <attr_info>, // see below
 ///              ...,
